changing css and adding to descriptions

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 
 <head>
+    <meta name="description"
+        content="Front-end web developer in San Antonio building custom websites for small businesses.">
+    <meta name="keywords"
+        content="San Antonio web developer, freelance websites, small business website, responsive design, SEO, web maintenance">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Keylan King | Freelance Frontend Developer</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/06e59cf638.js" crossorigin="anonymous">
 
@@ -18,9 +22,9 @@
         </nav>
         <ul class="nav__link--lists">
             <li class="nav__link">
-                <a href="#languages" class="nav__link--anchor
+                <a href="#services" class="nav__link--anchor
                 link__hover-effect
-                link__hover-effect--black">Technologies</a>
+                link__hover-effect--black">Services</a>
             </li>
             <li class="nav__link">
                 <a href="#projects" class="nav__link--anchor
@@ -52,7 +56,7 @@
                 <div class="about-me__info--container">
                     <div class="about-me__info--text--container">
                         <h1 class="about-me__info--title">
-                            Custome Websites for local businesses that convert
+                            Custome Websites That Help Local Business Grow
                         </h1>
                         <p class="about-me__info--para .about-me__info--para2">
                             I'm a <strong class="text--green">freelance web developer</strong> with a passion for
@@ -61,15 +65,12 @@
                             and
                             functional websites. I build fast, modern websites that help small business grow. Whether
                             you need a brand-new site or a better version of the one you have - I've got you covered.
-                            I'm always looking to help local small business thrive and grow. I
-                            believe
-                            the power of a beautifuiful, responsive, fast loading website
-                            can
-                            change the way your business is represented online and generate a larger customer base!
-                        </p>
-                        <button class="cta-btn">
-                            <a href="#contact" class="cta__btn--text">Book a free Consultation</a>
-                        </button>
+                            I'm always looking to help local small business thrive and grow.I believe in the power of a
+                            beautiful, responsive, fast-loading website to set the tone for your business and turn
+                            visitors into loyal customers.
+                            <button class="cta-btn">
+                                <a href="#contact" class="cta__btn--text">Book a free Consultation</a>
+                            </button>
 
                         <div class="about">
                             <h2 class="about__text">Hi, I'm Keylan - Your local website partner</h2>
@@ -112,35 +113,16 @@
     <figure class="about-me__image--mask">
         <img src="./assets/undraw_developer-activity_dn7p.svg" class="about-me__image" alt="">
 
-    </figure> 
+    </figure>
     </div>
     </div>
-    <section class="section" id="languages">
-        <div class="container">
-            <div class="row">
-                <h1 class="section__title">Here are the <span class="text--green">services</span> i offer</h1>
-               <ul>
-                <li><strong>✅ Website Design & development:</strong> Custom, responsive websites tailored to your business goals</li>
-                <li><strong>🔄 Monthly Maintenance:</strong> Stay worry-free with updates, backups, and small edits handled for you.</li>
-                <li><strong>📊 SEO & Analytics:</strong> Imorove search visibility and track visitor behavior with Google Analytics setup.</li>
-                <li><strong>🤖 AI Chatbot Integration:</strong> Let your website greet and assist visitors automatically 24/7.</li>
-                <li><strong>📱 Mobile Optimization:</strong> Your site will look and function fantastically on any device.</li>
-               </ul>
-               <button class="nav__link--anchor
-                    link__hover-effect
-                    nav__link--anchor-primary"> 
-               <a href="./assets/Freelance webdev/Web Development & Maintenance Pricing Sheet .pdf" target="_blank" class="secondary__btn">View Pricing</a>
-               </button>
-            
-            </div>
-        </div>
-    </section>
+
     <section class="section" id="projects">
         <div class="Container">
             <div class="row">
                 <h1 class="section__title">Here are some of my <span class="text--green">projects</span></h1>
                 <ul class="project__list">
-                       <li class="project">
+                    <li class="project">
 
 
                         <div class="project__wrapper">
@@ -151,7 +133,7 @@
                                     Technologies: HTML, CSS, JavaScript</h4>
                                 </h4>
                                 <p class="project__description--para">
-                                   Personal portfolio, showcasing projects. 
+                                    Personal portfolio, showcasing projects.
                                 </p>
                                 <div class="project__description--links">
 
@@ -169,10 +151,11 @@
                             <div class="project__description">
                                 <h3 class="project__description--title">☀️ Weather app project (In progress)</h3>
                                 <h4 class="project__description--sub-title">
-                                    Technologies: HTML, CSS, JavaScript, OpenWeather API, React</h4>
+                                    Technologies: HTML, CSS, JavaScript, OpenWeather API</h4>
                                 <p class="project__description--para">
-                                    Weather app that uses the OpenWeather API to display current weather conditions and
-                                    forecasts for any location.
+                                    Developed a fully responsive weather application that displays real-time forecasts
+                                    usining the OpenWeather API. Includes a clean UI, search functionality, and a dark
+                                    theme optimized for modern devices.
                                 </p>
                                 <div class="project__description--links">
 
@@ -193,7 +176,7 @@
                                     Technologies: HTML, CSS, JavaScript</h4>
                                 </h4>
                                 <p class="project__description--para">
-                                   Building an online library/bookstore, adding price fetching and JavaScript soon!</p>
+                                    Building an online library/bookstore, adding price fetching and JavaScript soon!</p>
                                 <div class="project__description--links">
 
                                     <a href="https://kingkey0101.github.io/E-Commerce-project/" target="_blank"
@@ -209,6 +192,34 @@
             </div>
         </div>
     </section>
+    <section class="services" id="services">
+        <h2>Services</h2>
+        <div class="services__container">
+            <div class="service__card">
+                <div class="service__description">
+                    <h3>✅ Website Design & Development</h3>
+                    <br>
+                    <h3>🤖 AI Chatbot Integration</h3>
+                    <p>Custom, mobile-friendly websites that load fast, look great and reflect your brand</p>
+                    <p>Let your website greet and assist visitors.</p>
+                </div>
+            </div>
+            <div class="service__card">
+                <div class="service__description">
+                    <h3>🔄 Site updates & Maintenance</h3>
+                    <p>Stay worry free and keep your site fresh and secure with ongoing updates, edits and performance
+                        checks. </p>
+                </div>
+            </div>
+            <div class="service__card">
+                <div class="service__description">
+                    <h3>📊 SEO & Analytics</h3>
+                    <p>Get discovered on Google and track visitor behavior with SEO optimization and Google Analytics.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="testimonials">
         <div class="client__feedback">
             <h2 class="client__text">Client Feedback</h2>
@@ -219,20 +230,22 @@
     <section class="contact__section">
         <div class="contact__wrapper">
             <div class="contact__description">
-                <h2 class="contact__text">Let's Build something for your Business.</h2>
-                <p class="contact__para">Have a project in mind or want to explore ideas? Reach out for a fee consultation - no pressure, just possibilities.</p>
-                
+                <h2 class="contact__text">Let's Work Together.</h2>
+                <p class="contact__para">If you're looking for a fast, professional website that helps your business
+                    grow, let's connect. I'm currently booking new projects and offer ongoing support plans as well.
+                </p>
+
                 <div class="contact__list">
                     <ul>
-                     <a href="mailto:kingkey0101@outlook.com" target="_blank" class="nav__link--anchor
+                        <a href="mailto:kingkey0101@outlook.com" target="_blank" class="nav__link--anchor
                      link__hover-effect"> 📧 kingkey0101@outlook.com</a>
-                     <li>📍 Based in San Antonio, TX - working with clients nationwide</li>
-                </ul>
-                <button>
-                    <a href="" class="nav__link--anchor
+                        <li>📍 Based in San Antonio, TX - working with clients nationwide</li>
+                    </ul>
+                    <button>
+                        <a href="" class="nav__link--anchor
                     link__hover-effect
                     nav__link--anchor-primary">Schedule a Free Consultation</a>
-                </button>
+                    </button>
                 </div>
             </div>
         </div>
@@ -275,4 +288,5 @@
         </div>
     </footer>
 </body>
+
 </html>
